pkg/lang/testdata/ub/calls/valid/list.ub
inputs: { a: { type: list(string) } }
