pkg/lang/testdata/ub/calls/invalid/constructor-in-value.ub
outputs: { o: { value: list(1) } }
